Fixed background photo for the menu. Got menu to overlap and footer to stay below. Also styled menu section heading.

--- a/menu_stylesheet.css
+++ b/menu_stylesheet.css
@@ -27,6 +27,7 @@ footer {
         margin: 0px;
     }
 
+
     header {
         width: 100%;
         height: 40px;
@@ -56,21 +57,26 @@ footer {
 
     section {
         width: 100%;
+        height: 1750px;
+        background-color: #F2F2F2;
     }
 
-    .background-pic {
+    .background-menu-pic {
         width: 100%;
         height: 300px;
         object-fit: cover;
     }
 
     .menu {
+        position: absolute;
+        z-index: 2;
+        top: 260;
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: #F2f2f2;
-        border-radius: 20px 20px 0px 0px;
+        border-radius: 35px 35px 0px 0px;
         font-family: 'Roboto' , sans-serif;
     }
 
@@ -78,7 +84,11 @@ footer {
         width: 95%;
         display: flex;
         justify-content: space-between;
+    }
+
+    .menu-heading {
         font-family: 'Shrikhand' , sans-serif;
+        font-size: 30px;
     }
 
     .menu-top-icon-space {
@@ -97,6 +107,17 @@ footer {
 
     .menu-section-heading {
         width: 100%;
+        position: relative;
+        display: inline-block;
+    }
+
+    .menu-section-heading:before {
+        content: '';
+        border-bottom: 3px solid #99E2D0;
+        position: absolute;
+        width: 15%;
+        left: 0%;
+        bottom: -5;
     }
 
     .menu-item {
@@ -144,6 +165,8 @@ footer {
 
     footer {
         flex-direction: column;
+        position: absolute;
+        bottom: 0;
     }
 
     #footer-top {
